--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 0;
     margin: 0;
     font-family: sans-serif;
@@ -11,9 +12,24 @@ body {
 
 #main-play-area {
     background-color: black;
-    background-image: url(/img/space.png);
+    background-image: url(img/space.png);
     height: 600px;
     width: 600px;
+}
+
+.game-instructions {
+    position: relative;
+    color: white;
+    left: 7rem;
+    top: 0px;
+}
+
+.start-button {
+    position: relative;
+    color: white;
+    top: 10rem;
+    left: 15rem;
+    cursor: pointer;
 }
 
 .player-shooter {
@@ -21,5 +37,29 @@ body {
     height: 60px;
     width: 70px;
     left: 20px;
-    top: 250px;
+    top: 250px
+}
+
+.laser {
+    position: relative;
+    width: 40px;
+    height: 30px;
+}
+
+.alien {
+    height: 60px;
+    width: 70px;
+    position: relative;
+}
+
+.alien-transition {
+    opacity: 1;
+    transition: opacity 1.5s ease-in-out;
+}
+
+.dead-alien {
+    height: 60px;
+    width: 70px;
+    position: relative;
+    opacity: 0;
 }
